Improve card menu
