# backend/src/routes.ts
@@ -469,6 +469,7 @@ const models: TsoaRoute.Models = {
 			tmtSecret: { dataType: 'string', required: true },
 			isStopped: { dataType: 'boolean', required: true },
 			electionMap: { dataType: 'string', required: true },
+			serverPassword: { dataType: 'string', required: true },
 		},
 		additionalProperties: false,
 	},
@@ -566,6 +567,7 @@ const models: TsoaRoute.Models = {
 			tmtSecret: { dataType: 'string', required: true },
 			isStopped: { dataType: 'boolean', required: true },
 			electionMap: { dataType: 'string', required: true },
+			serverPassword: { dataType: 'string', required: true },
 			isLive: { dataType: 'boolean', required: true },
 		},
 		additionalProperties: false,
