# backend/swagger.json
@@ -722,6 +722,10 @@
 					"electionMap": {
 						"type": "string",
 						"description": "this map will be loaded on match init (defaults to de_dust2 if not set)"
+					},
+					"serverPassword": {
+						"type": "string",
+						"description": "Server password, periodically fetched from game server"
 					}
 				},
 				"required": [
@@ -744,7 +748,8 @@
 					"players",
 					"tmtSecret",
 					"isStopped",
-					"electionMap"
+					"electionMap",
+					"serverPassword"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -999,6 +1004,10 @@
 						"type": "string",
 						"description": "this map will be loaded on match init (defaults to de_dust2 if not set)"
 					},
+					"serverPassword": {
+						"type": "string",
+						"description": "Server password, periodically fetched from game server"
+					},
 					"isLive": {
 						"type": "boolean"
 					}
@@ -1024,6 +1033,7 @@
 					"tmtSecret",
 					"isStopped",
 					"electionMap",
+					"serverPassword",
 					"isLive"
 				],
 				"type": "object",
